fixed ther align issue

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h1{
 }
 .center {
   width: 1280px;
+  display: flex;
   text-align: center;
   align-content: center;
   justify-content: center;
@@ -30,10 +31,11 @@ h1{
 .info {
   border: 2px solid red;
   border-radius: 10px;
-  margin: 10px 0px 20px 0px;
+  margin: 10px 10px 20px 0px;
   padding: 5px;
-  width: 30%;
-  display: inline-block;
+  width: 20%;
+  height: 300px;
+  display: flex;
   text-align: center;
   background-color: blueviolet;
   color: white;
@@ -43,11 +45,11 @@ h1{
   background-color: green;
   font-size: 20px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  width: 35%;
+  width: 20%;
   border: 10px dotted greenyellow;
   border-radius: 5px;
   margin: 10px 20px 10px 20px;
-  padding: 100px;
+  padding: 50px;
 }
 input:focus {
   color: brown;
@@ -59,12 +61,17 @@ li:last-child {
 }
 li:nth-child(2n + 1) {
   background-color: coral;
-  width: 30%;
+  width: 100%;
 }
 li:nth-child(2n) {
   color: rosybrown;
-  width: 30%;
+  width: 100%;
 }
 a:visited{
   color:red;
+}
+.div{
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
